[package]
name = "ws_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.29"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.34.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "signal"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"]}
url = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
